--- a/index.html
+++ b/index.html
@@ -103,18 +103,16 @@
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+              We’ll tackle different computer science topics — game design, web development, artificial intelligence, object oriented programming, just to name a few! Ultimately, projects will be showcased on our website (which we’ll build together). Projects will range from fun video games to AI models that solve contemporary issues - whatever piques your interest!
+              <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href="">Web Development + Design</a></h4>
+              <p class="description">Learn how to design websites and publish them! At the end of the year, you will have a portfolio for all your projects.</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-brightness-high"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <h4 class="title"><a href="">Game Design</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
             </div>
 
@@ -127,7 +125,7 @@
           </div>
 
           <div class="col-lg-6 background order-lg-2" data-aos="zoom-in">
-            <img src="assets/img/about-img.svg" class="img-fluid" alt="">
+            <img src="assets/img/gwc-graphic1.png" class="img-fluid" alt="">
           </div>
         </div>
 
