--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
               <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href="">Artificial Intelligence</a></h4>
+              <p class="description">Learn about neural networks, computer vision, natural language processing... and more!</p>
             </div>
 
           </div>
@@ -128,7 +128,6 @@
             <img src="assets/img/gwc-graphic1.png" class="img-fluid" alt="">
           </div>
         </div>
-
         <div class="row about-extra">
           <div class="col-lg-6" data-aos="fade-right">
             <img src="assets/img/about-extra-1.svg" class="img-fluid" alt="">
