--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h3>Team</h3>
-          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p>Leadership @ Girls Who Code Club</p>
         </div>
 
         <div class="row">
@@ -510,8 +510,8 @@
               <img src="assets/img/team-1.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Walter White</h4>
-                  <span>Chief Executive Officer</span>
+                  <h4>Isabella Lu</h4>
+                  <span>Founder</span>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
@@ -525,11 +525,11 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-out" data-aos-delay="200">
             <div class="member">
-              <img src="assets/img/team-2.jpg" class="img-fluid" alt="">
+              <img src="assets/samy-pfp.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Sarah Jhonson</h4>
-                  <span>Product Manager</span>
+                  <h4>Samy Moll</h4>
+                  <span>Co-founder</span>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
