--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-out" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/bust-pfp.png" class="img-fluid" alt="">
+              <img src="assets/img/isabella-pfp.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Isabella Lu</h4>
