--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
           <div class="col-lg-3 col-md-6" data-aos="zoom-out" data-aos-delay="200">
             <div class="member">
-              <img src="assets/img/samy-pfp.png" class="img-fluid" alt="">
+              <img src="assets/img/samypfp.png" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Samy Moll</h4>
