--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
 
       <div class="hero-info" data-aos="zoom-in" data-aos-delay="100">
-        <h2>Welcome to LFSF's first<br><span style = "color: #C219AE">Girls Who Code Club</span><br>Every Monday/ 12:10-1:00/ Room X</h2>
+        <h2>Welcome to LFSF's first<br><span style = "color: #C219AE">Girls Who Code Club</span><br>Every Monday/ 12:10-1:00/ Room 148</h2>
         <div>
           <a href="#about" class="btn-get-started scrollto">Upcoming Projects</a>
           <a href="#services" class="btn-services scrollto">Find Resources</a>
