--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
               <div class="icon"><i class="bi bi-brightness-high"></i></div>
               <h4 class="title"><a href="">Game Design</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p class="description">Program simple games in Pygame (Python library)!</p>
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
@@ -131,11 +131,11 @@
       </div>
     </section><!-- End About Section -->
     <!-- ======= Why Us Section ======= -->
-    <section id="why-us">
+    <section id="upcoming-prj">
       <div class="container" data-aos="fade-up">
         <header class="section-header">
-          <h3>Why choose us?</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          <h3>What are we working on?</h3>
+          <p>Learn about our anticipated and current projects!</p>
         </header>
 
         <div class="row row-eq-height justify-content-center">
@@ -144,9 +144,9 @@
             <div class="card" data-aos="zoom-in" data-aos-delay="100">
               <i class="bi bi-calendar4-week"></i>
               <div class="card-body">
-                <h5 class="card-title">Corporis dolorem</h5>
-                <p class="card-text">Deleniti optio et nisi dolorem debitis. Aliquam nobis est temporibus sunt ab inventore officiis aut voluptatibus.</p>
-                <a href="#" class="readmore">Read more </a>
+                <h5 class="card-title">Representing History</h5>
+                <p class="card-text">We are creating video games and webpages to teach others about historical events that we are intrigued by.</p>
+                
               </div>
             </div>
           </div>
@@ -155,9 +155,8 @@
             <div class="card" data-aos="zoom-in" data-aos-delay="200">
               <i class="bi bi-camera-reels"></i>
               <div class="card-body">
-                <h5 class="card-title">Voluptates dolores</h5>
-                <p class="card-text">Voluptates nihil et quis omnis et eaque omnis sint aut. Ducimus dolorum aspernatur.</p>
-                <a href="#" class="readmore">Read more </a>
+                <h5 class="card-title">Android Video Games</h5>
+                <p class="card-text">(TBD) We are anticipating a collaboration with GMG to learn about how to deploy games on Android!</p>
               </div>
             </div>
           </div>
@@ -166,9 +165,9 @@
             <div class="card" data-aos="zoom-in" data-aos-delay="300">
               <i class="bi bi-chat-square-text"></i>
               <div class="card-body">
-                <h5 class="card-title">Eum ut aspernatur</h5>
-                <p class="card-text">Autem quod nesciunt eos ea aut amet laboriosam ab. Eos quis porro in non nemo ex. </p>
-                <a href="#" class="readmore">Read more </a>
+                <h5 class="card-title">Suggest something!</h5>
+                <p class="card-text">We are always open to working on any of your suggestions.</p>
+                <a href="mailto:ilu24@lelycee.org, smoll24@lelycee.org, akoslow24@lelycee.org" class="readmore">please email your suggestions! </a>
               </div>
             </div>
           </div>
@@ -178,23 +177,18 @@
         <div class="row counters" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Clients</p>
+            <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Members</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="421" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
             <p>Projects</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="1364" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hours Of Support</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="42" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hard Workers</p>
+            <span data-purecounter-start="0" data-purecounter-end="11" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Hours</p>
           </div>
 
         </div>
