--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
     </section><!-- End About Section -->
     <!-- ======= Why Us Section ======= -->
-    <section id="upcoming-prj">
+    <section id="why-us">
       <div class="container" data-aos="fade-up">
         <header class="section-header">
           <h3>What are we working on?</h3>
